WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
CLOSED FIXED
40527
[Qt] Fix tst_qwebframe regression from
http://trac.webkit.org/changeset/61062
https://bugs.webkit.org/show_bug.cgi?id=40527
Summary
[Qt] Fix tst_qwebframe regression from http://trac.webkit.org/changeset/61062
Robert Hogan
Reported
2010-06-12 08:14:15 PDT
Fix regression to tst_qwebframe
Attachments
Patch
(1.55 KB, patch)
2010-06-12 08:31 PDT
,
Robert Hogan
kenneth
: review+
robert
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Robert Hogan
Comment 1
2010-06-12 08:31:02 PDT
Created
attachment 58552
[details]
Patch
Robert Hogan
Comment 2
2010-06-20 08:41:33 PDT
Landed
r61063
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug