2010-06-12  Robert Hogan  <robert@webkit.org>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Fix tst_qwebframe regression from http://trac.webkit.org/changeset/61062

        Only use cacheableBindingRootObject() if the object has QtOwnership.

        https://bugs.webkit.org/show_bug.cgi?id=40527

        * Api/qwebframe.cpp:
        (QWebFrame::addToJavaScriptWindowObject):

Canonical link: https://commits.webkit.org/52078@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61063 268f45cc-cd09-0410-ab3c-d52691b4dbfc